# tsp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: release.yml  tests.yml
.junie/: guidelines.md
data/: Paris.csv  kroA150-15.tsp  kroA150-30.tsp  kroA150-60.tsp
scripts/: demo_cost_matrix.py  main.py  main2.py  main3.py  map.py  plot_cartesian.py
src/tsp/: __init__.py  cost_matrix.py  demo_cost_matrix.py  main.py  main2.py  map.py  node_schema.py  plot_graph.py  solver.py  tsp_data.py  tsp_model.py
tests/: conftest.py  test_cost_matrix.py  test_node_schema.py  test_tsp_data.py  test_tsp_model.py
