[project]
name = "tsp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Arne Sørli", email = "arnesor@users.noreply.github.com" }]
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "geopy>=2.3.0",
    "highspy>=1.11.0",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "numpy>=1.24.0",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "pandera>=0.25.0",
    "pyomo>=6.9.2",
    "pyproj>=3.4.0",
    "pyscipopt>=5.5.0",
    "scipy>=1.16.1",
    "scipy-stubs==1.16.1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]
[project.scripts]
tsp-uv = "tsp_uv:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
